--- a/estilos.css
+++ b/estilos.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh; /* Garante que a página tenha a altura mínima da viewport */
-    background-image: url('https://img.freepik.com/free-vector/black-background-with-focus-spot-light_1017-27230.jpg'); /* imagem de fundo */
+    background-image: url('https://wallpapers.com/images/featured/plain-black-background-02fh7564l8qq4m6d.jpg'); /* imagem de fundo */
     background-size: cover; /* Faz a imagem cobrir toda a tela */
     background-position: center; /* Centraliza a imagem de fundo */
   }
